--- a/public/index.pug
+++ b/public/index.pug
@@ -30,6 +30,12 @@ html(lang='en-US')
     )
     link(rel='license', href='license.txt')
     link(rel='canonical', href=pageUrl)
+    svg(xmlns='http://www.w3.org/2000/svg')
+      defs
+        symbol#cp
+          path(
+            d='M11.2 0a.8.8 0 0 0-.8.8v11.4L7.26 9.44a.803.803 0 0 0-1.13.074l-1.05 1.2a.8.8 0 0 0 .073 1.13l6.33 5.54a.795.795 0 0 0 1.05 0l6.32-5.54a.8.8 0 0 0 .074-1.13l-1.05-1.2a.804.804 0 0 0-1.13-.074l-3.14 2.76V.8a.8.8 0 0 0-.8-.8zm-8 20.8a.8.8 0 0 0-.8.8v1.6a.8.8 0 0 0 .8.8h17.6a.8.8 0 0 0 .8-.8v-1.6a.8.8 0 0 0-.8-.8z'
+          )
 
   body.no-js.order-alphabetically.download-svg(tabindex='-1')
     .popup_modal.popup__top.hidden
@@ -343,14 +349,8 @@ html(lang='en-US')
                 data-icon=icon.slug,
                 download
               )
-                svg(
-                  role='img',
-                  xmlns='http://www.w3.org/2000/svg',
-                  viewBox='0 0 24 24'
-                )
-                  path(
-                    d='M11.2 0a.8.8 0 0 0-.8.8v11.4L7.26 9.44a.803.803 0 0 0-1.13.074l-1.05 1.2a.8.8 0 0 0 .073 1.13l6.33 5.54a.795.795 0 0 0 1.05 0l6.32-5.54a.8.8 0 0 0 .074-1.13l-1.05-1.2a.804.804 0 0 0-1.13-.074l-3.14 2.76V.8a.8.8 0 0 0-.8-.8zm-8 20.8a.8.8 0 0 0-.8.8v1.6a.8.8 0 0 0 .8.8h17.6a.8.8 0 0 0 .8-.8v-1.6a.8.8 0 0 0-.8-.8z'
-                  )
+                svg(role='img', viewBox='0 0 24 24')
+                  use(href='cp')
     footer.footer
       .footer-description
         p.
