Fix error in latest merged PR

--- a/public/index.pug
+++ b/public/index.pug
@@ -30,7 +30,7 @@ html(lang='en-US')
     )
     link(rel='license', href='license.txt')
     link(rel='canonical', href=pageUrl)
-    svg(xmlns='http://www.w3.org/2000/svg')
+    svg(xmlns='http://www.w3.org/2000/svg', style="display:none")
       defs
         symbol#cp
           path(
