changed menuToggle for menu-toggle

--- a/public/index.pug
+++ b/public/index.pug
@@ -56,7 +56,7 @@ html(lang='en-US')
       .header__title-container
         h1.header__title Simple Icons
         p.header__description #{ iconCount } Free #[abbr(title='Scalable Vector Graphic') SVG] icons for popular brands
-      #menuToggle
+      #menu-Toggle
         svg(viewBox='0 0 100 80', width='40', height='40')
           rect(width='100', height='20')
           rect(y='30', width='100', height='20')
