Fix reused copy buttons href

--- a/public/index.pug
+++ b/public/index.pug
@@ -350,7 +350,7 @@ html(lang='en-US')
                 download
               )
                 svg(role='img', viewBox='0 0 24 24')
-                  use(href='cp')
+                  use(href='#cp')
     footer.footer
       .footer-description
         p.
