replaced hidden-768 for hidden-gt-768px at Mondeja's request

--- a/public/index.pug
+++ b/public/index.pug
@@ -62,7 +62,7 @@ html(lang='en-US')
           rect(y='30', width='100', height='20')
           rect(y='60', width='100', height='20')
         input.hidden(type='checkbox')
-      ul#menu.header__list.hidden-768
+      ul#menu.header__list.hidden-gt-768px
         li.header__list-item
           a.header__list-icon(
             title='Main Repository',
