changed Extensions for Extension in menu popup

--- a/public/index.pug
+++ b/public/index.pug
@@ -42,7 +42,7 @@ html(lang='en-US')
       .popup-body 
         table.extensions__table
           tr
-            td Extensions
+            td Extension
             td Author
           each ext in extensions
             tr
