Dom manipulation to sort icon cards (#145)
* WIP modal popup

* added unit testing for third party extensions

* fixed dom-utils test

* rebasing from master

* rebasing from master

* set package-lock.json to version 2

* set package.json to v2

* WIP for icon ordering in DOM

* WIP for icon ordering in DOM

* added tests for DOM manipulation

* fixed error resetting search

* optimized svgs

* added unit testing for third party extensions

* rebasing from master

* rebasing from master

* set package-lock.json to version 2

* set package.json to v2

* WIP for icon ordering in DOM

* WIP for icon ordering in DOM

* added tests for DOM manipulation

* fixed error resetting search

* ORDER_BY_RELEVANCE to ORDER_RELEVANCE

* merged

* ran lint, removed order-alphabetically class

* npm install as prompted by the pipeline

* trying to solve ajv module error

* prettified index.js

* removed duplicated extensions css styles, removed duplicated sortChildren call in dom.utils.test.js, removed unnecesary conversions of single quotes to double quotes and viceversa, removed unnecessary changes related to whitelines

* Fix error merging with master

* changed Extensions for Extension in menu popup

* Update public/index.pug

sure

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update tests/ordering.test.js

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/stylesheet.css

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update tests/dom-utils.test.js

sure

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/scripts/ordering.js

Sure, if you say so.

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Update public/scripts/ordering.js

Co-authored-by: Álvaro Mondéjar <mondejar1994@gmail.com>

* Optimized icons sorting

* Drop uneeded async keyword

* Fix error sorting by relevance on search

* Fix end2end

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -254,10 +254,12 @@ a {
   cursor: pointer;
   z-index: 100;
 }
+
 /* Extensions */
 .extensions__table {
   font-family: var(--font-family-stylized);
   font-size: 0.9rem;
+  border-radius: var(--border-radius-large);
   border-spacing: 0;
   border-collapse: collapse;
 }
@@ -536,9 +538,9 @@ input[type='search']::-ms-reveal {
 }
 
 /* Control - order */
-body.order-alphabetically #order-alpha,
-body.order-by-color #order-color,
-body.order-by-relevance #order-relevance {
+body.order-alpha #order-alpha,
+body.order-color #order-color,
+body.order-relevance #order-relevance {
   background-color: var(--color-button-active);
   border-color: var(--color-button-active);
   color: var(--color-background);
@@ -776,15 +778,6 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   line-height: 1.5rem;
   opacity: 0.5;
   text-transform: uppercase;
-}
-
-/* Ordering grid-items */
-
-body.order-by-color .grid-item {
-  order: var(--order-color);
-}
-body.order-by-relevance .grid-item {
-  order: var(--order-relevance);
 }
 
 /* Footer */
