Reduce `preventDefault` usage using buttons `type` attribute

--- a/public/index.pug
+++ b/public/index.pug
@@ -184,6 +184,7 @@ html(lang='en-US')
           .control-field__row
             button#order-alpha.control__button.first__button(
               title='Sort alphabetically',
+              type='button',
               disabled
             )
               svg(
@@ -197,6 +198,7 @@ html(lang='en-US')
                 )
             button#order-color.control__button.last__button(
               title='Sort by color',
+              type='button',
               disabled
             )
               svg(
@@ -211,6 +213,7 @@ html(lang='en-US')
             button#order-relevance.control__button.hidden(
               title='Sort by relevance',
               aria-hidden='true',
+              type='button',
               disabled
             )
               svg(
@@ -227,6 +230,7 @@ html(lang='en-US')
           .control-field__row
             button#color-scheme-light.control__button.first__button(
               title='Light color scheme',
+              type='button',
               disabled
             )
               svg(
@@ -240,6 +244,7 @@ html(lang='en-US')
                 )
             button#color-scheme-dark.control__button(
               title='Dark color scheme',
+              type='button',
               disabled
             )
               svg(
@@ -253,6 +258,7 @@ html(lang='en-US')
                 )
             button#color-scheme-system.control__button.last__button(
               title='System color scheme',
+              type='button',
               disabled
             )
               svg(
@@ -269,6 +275,7 @@ html(lang='en-US')
           .control-field__row
             button#download-svg.control__button.first__button(
               title='download SVG',
+              type='button',
               disabled
             )
               svg(
@@ -282,6 +289,7 @@ html(lang='en-US')
                 )
             button#download-pdf.control__button.last__button(
               title='download PDF',
+              type='button',
               disabled
             )
               svg(
