--- a/public/index.pug
+++ b/public/index.pug
@@ -30,6 +30,8 @@ html(lang='en-US')
     )
     link(rel='license', href='license.txt')
     link(rel='canonical', href=pageUrl)
+    script(type='application/ld+json')
+      | !{ JSON.stringify(structuredData) }
     svg(xmlns='http://www.w3.org/2000/svg', style='display: none')
       defs
         symbol#cp
