Continue converting to ESM...

--- a/public/index.pug
+++ b/public/index.pug
@@ -50,16 +50,16 @@ html(lang='en-US')
             tr
               td 
                 a.link-button(
-                  href=ext.urlModule,
+                  href=ext.module.url,
                   rel='noopener',
                   target='_blank'
-                ) #{ ext.nameModule }
+                ) #{ ext.module.name }
               td
                 a.link-button(
-                  href=ext.urlAuthor,
+                  href=ext.author.url,
                   rel='noopener',
                   target='_blank'
-                ) #{ ext.nameAuthor }
+                ) #{ ext.author.name }
     header.header
       ul.header__list
         li.header__list-item
