--- a/public/index.pug
+++ b/public/index.pug
@@ -20,6 +20,8 @@ html(lang='en-US')
     meta(name='twitter:description', content=pageDescription)
     meta(name='twitter:url', content=pageUrl)
     meta(name='twitter:image:src', content=`${pageUrl}/images/og.png`)
+    meta(name='msvalidate.01', content='14319924BC1F00DC15EF0EAA29E72404')
+    meta(name='yandex-verification', content='8b467a0b98aa2725')
     link(rel='icon', type='image/x-icon', href=`${pageUrl}/images/favicon.ico`)
     link(rel='icon', type='image/png', href=`${pageUrl}/images/favicon.png`)
     link(rel='apple-touch-icon', href=`${pageUrl}/images/apple-touch-icon.png`)
