--- a/public/index.pug
+++ b/public/index.pug
@@ -334,7 +334,7 @@ html(lang=lang)
                 disabled
               )
                 img.icon-preview(
-                  src=`${urlPrefix}icons/${icon.slug}.svg`,
+                  src=`${relativeUrlPrefix}icons/${icon.slug}.svg`,
                   loading='lazy',
                   alt=`${ t_('$iconTitle icon').replace('$iconTitle', icon.title) }`
                 )
