Add language switcher

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -909,6 +909,38 @@ body:not(.dark):not(.light) #color-scheme-system:not(:disabled) {
   background-image: var(--asset-svg-legal);
 }
 
+/* language selector */
+
+.language-switcher__container {
+  opacity: 0;
+  position: relative;
+  color: var(--color-text-default);
+  top: -58px;
+  left: -23px;
+  font-size: 15px;
+  text-transform: uppercase;
+  font-family: var(--font-family-stylized);
+  width: 84px;
+  height: 120px;
+  padding: 70px 0 10px 0;
+}
+.language-switcher__container:hover {
+  opacity: 1;
+}
+
+.language-switcher__container ul {
+  display: flex;
+  flex-direction: column;
+  flex-shrink: 10;
+}
+
+.language-switcher__container ul li {
+  padding: 3px 6px;
+}
+.language-switcher__container ul li:hover {
+  color: var(--color-text-light);
+}
+
 /* Utility */
 
 .fg-2 {
